--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -231,7 +231,7 @@ div(ng-cloak, ng-controller="collectionController")
             div {{ 'author.fields.name' |ng}}
         td {{ 'card.pubs_repr' | ng }}
         td {{ 'card.distributor_repr' | ng }}
-        td {{ 'card.shelf' | ng }}
+        td(class="badge badge-secondary") {{ 'card.shelf' | ng }}
         td.text-right {{ 'card.quantity' | ng }}
         td.text-right {{ 'card.qty_deposits' | ng }}
         td
