--- a/templates/base.jade
+++ b/templates/base.jade
@@ -28,11 +28,11 @@ html(ng-app="abelujo")
     link(rel='stylesheet', type='text/css', href='{% static "css/loading-bar.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "css/hotkeys.min.css" %}')
     // index.css: element-ui
-    link(rel='stylesheet', type='text/css', href='{% static "css/index.css" %}')
+    link(rel='stylesheet', type='text/css', ng-href='{% static "css/index.css" %}')
 
     script(defer, src="https://cdn.jsdelivr.net/npm/notiflix@2.1.3/dist/AIO/notiflix-aio-2.1.3.min.js")
     script(src="https://cdn.jsdelivr.net/npm/luxon@1.25.0/build/global/luxon.min.js")
-    script(src="{% static 'app.js' %}")
+    script(ng-src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'search/js/abelujo-js.js' %}")
 
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
