--- a/templates/search/history_sells_day.html
+++ b/templates/search/history_sells_day.html
@@ -54,8 +54,14 @@
     <div class="panel-heading">{% trans "Cash register" %}</div>
     <div class="panel-body">
       <h4> {{ sells_data.total_price_sold_fmt }} </h4>
-      <div> {% trans "Books" %}: {{ sells_data.total_price_sold_books_fmt }}</div>
-      <!-- <div> {% trans "Other products" %}: {{ sells_data.total_price_sold_not_books_fmt }}</div> -->
+      <div>
+        <span class="badge badge-info"> {% trans "Books" %} </span>
+        <span> {{ sells_data.total_price_sold_books_fmt }} </span>
+      </div>
+      <div>
+        <span class="badge badge-info"> {% trans "Other products" %} </span>
+        <span> {{ sells_data.total_price_sold_not_books_fmt }} </span>
+      </div>
       {% for it in data_grouped_sells %}
       {% if it.0 != 'book' %}
       <div>
@@ -75,8 +81,6 @@
         {% if  sells_data.nb_cards_returned %}<span>&nbsp; {% trans "Articles returned" %}: {{ sells_data.nb_cards_returned }}</span>{% endif %}
       </h4>
 
-      <!-- <div> {% trans "Other products" %}: {{ sells_data.total_price_sold_not_books_fmt }}</div> -->
-
       {% for it in data_grouped_sells %}
       {% if it.0 != 'book' %}
       <div>
@@ -91,7 +95,6 @@
     <div class="panel-heading">{% trans "Cash register movements" %}</div>
     <div class="panel-body">
       <h4>{{ sells_data.nb_sells }} </h4>
-      <!-- <div> {% trans "Other products" %}: {{ sells_data.total_price_sold_not_books_fmt }}</div> -->
 
       {% for it in data_grouped_sells %}
       {% if it.0 != 'book' %}
@@ -110,11 +113,11 @@
       <h4>
         {{ sells_data.sell_mean_fmt }}
       </h4>
-      <!-- <div> {% trans "Other products" %}: {{ sells_data.total_price_sold_not_books_fmt }}</div> -->
       {% for it in data_grouped_sells %}
       {% if it.0 != 'book' %}
       <div>
-        {{ it.0 }}: {{ it.1.sell_mean }}
+        <span> {{ it.0 }} </span>
+        <span> {{ it.1.sell_mean | currency }} </span>
       </div>
       {% endif %}
       {% endfor %}
