(minor) auto_command: hide "todo"s
[ci skip]

--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -54,7 +54,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
                   td.text-right {{ 'totals.total_price_fmt' |ng}}
 
       .col-md-6
-        table.table.table-condensed
+        //- table.table.table-condensed
           tbody
                 tr
                   td
