--- a/templates/search/to_command_index.jade
+++ b/templates/search/to_command_index.jade
@@ -51,6 +51,7 @@ table.table.table-condensed.table-striped
         a(href="/commands/supplier/0") {{ no_dist.0 }}
       td {{ no_dist.1 }}
 
+h4 {% trans "Grouped by supplier" %}:
 table.table.table-condensed.table-striped
   thead
     th {% trans "Supplier" %}
